--- a/qrcode-generator/index.html
+++ b/qrcode-generator/index.html
@@ -1,1 +1,32 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1"><meta name="description" content="Free QRCode Generator with no collecting of information user fills in."/><meta name="keywords" content="QRCode, QRCode Generator, Free QRCode Generator, Link QRCode Generator, URL QRCode Generator, Wifi QRCode Generator, Location QRCode Generator, Crypto QRCode Generator"/><meta name="author" content="Ved Smithiprechawongse"/><meta name="url" content="https://vedsmith92.github.io/qrcode-generator"/><meta name="language" content="EN"/><meta name="robots" content="QRCode, QRCode Generator, Free QRCode Generator, Link QRCode Generator, URL QRCode Generator, Wifi QRCode Generator, Location QRCode Generator, Crypto QRCode Generator"/><meta name="googlebot" content="QRCode, QRCode Generator, Free QRCode Generator, Link QRCode Generator, URL QRCode Generator, Wifi QRCode Generator, Location QRCode Generator, Crypto QRCode Generator"/><meta name="copyright" content="Copyright © 2022 by Ved Smithiprechawongse"/><meta property="og:title" content="QRCode Generator"/><meta property="og:description" content="Free QRCode Generator with no collecting of information user fills in."/><meta property="og:type" content="website"/><meta property="og:url" content="https://vedsmith92.github.io/qrcode-generator"/><meta property="og:site_name" content="QRCode Generator"/><link rel="icon" type="image/png" href="./favicon.png"><title>QRCode Generator</title></head><body><div id="app"></div><script defer="defer" src="./app.js"></script><link href="./style.css" rel="stylesheet"></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1, minimum-scale=1" />
+	<meta name="theme-color" content="#000000" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+	<meta name="description" content="Free QRCode Generator."/>
+	<meta name="keywords" content="QRCode, QRCode Generator, Free QRCode Generator, Link QRCode Generator, URL QRCode Generator, Wifi QRCode Generator, Location QRCode Generator, Crypto QRCode Generator"/>
+	<meta name="author" content="Ved Smithiprechawongse"/>
+	<meta name="url" content="https://vedsmith92.github.io/qrcode-generator"/>
+	<meta name="language" content="EN"/>
+	<meta name="robots" content="QRCode, QRCode Generator, Free QRCode Generator, Link QRCode Generator, URL QRCode Generator, Wifi QRCode Generator, Location QRCode Generator, Crypto QRCode Generator"/>
+	<meta name="googlebot" content="QRCode, QRCode Generator, Free QRCode Generator, Link QRCode Generator, URL QRCode Generator, Wifi QRCode Generator, Location QRCode Generator, Crypto QRCode Generator"/>
+	<meta name="copyright" content="Copyright © 2022 by vedsmith92.github.io" />
+	<meta property="og:title" content="QRCode Generator"/>
+	<meta property="og:description" content="Free QRCode Generator."/>
+	<meta property="og:type" content="website"/>
+	<meta property="og:url" content="https://vedsmith92.github.io/qrcode-generator"/>
+	<meta property="og:site_name" content="QRCode Generator"/>
+	<link rel="shortcut icon" type="image/png" href="/assets/favicon.18402967.png" />
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+	<title>QRCode Generator – by vedsmith92.github.io</title>
+  <script type="module" crossorigin src="/assets/index.a60a46a7.js"></script>
+  <link rel="stylesheet" href="/assets/index.32c85323.css">
+<link rel="manifest" href="/manifest.webmanifest"><script id="vite-plugin-pwa:register-sw" src="/registerSW.js"></script></head>
+<body>
+	<noscript>This app requires Javascript to be enabled.</noscript>
+	<div id="app"></div>
+	
+</body>
+</html>
