qrcode-generator: fix base path

--- a/qrcode-generator/index.html
+++ b/qrcode-generator/index.html
@@ -18,12 +18,12 @@
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://vedsmith92.github.io/qrcode-generator"/>
 	<meta property="og:site_name" content="QRCode Generator"/>
-	<link rel="shortcut icon" type="image/png" href="/assets/favicon.18402967.png" />
+	<link rel="shortcut icon" type="image/png" href="/qrcode-generator/assets/favicon.18402967.png" />
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 	<title>QRCode Generator – by vedsmith92.github.io</title>
-  <script type="module" crossorigin src="/assets/index.a60a46a7.js"></script>
-  <link rel="stylesheet" href="/assets/index.32c85323.css">
-<link rel="manifest" href="/manifest.webmanifest"><script id="vite-plugin-pwa:register-sw" src="/registerSW.js"></script></head>
+  <script type="module" crossorigin src="/qrcode-generator/assets/index.a60a46a7.js"></script>
+  <link rel="stylesheet" href="/qrcode-generator/assets/index.527bec1c.css">
+<link rel="manifest" href="/qrcode-generator/manifest.webmanifest"><script id="vite-plugin-pwa:register-sw" src="/qrcode-generator/registerSW.js"></script></head>
 <body>
 	<noscript>This app requires Javascript to be enabled.</noscript>
 	<div id="app"></div>
