--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>Document</title>
 </head>
 <body>
-	<a href="/qrcode-generator">QRCode Generator</a>
+	<a href="/qrcode-generator">QRCode Generator</a><br>
+	<a href="/finance-calculator">Finance Calculator</a>
 </body>
 </html>
