--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
 	<a href="/qrcode-generator">QRCode Generator</a><br>
 	<a href="/finance-calculator">Finance Calculator</a>
+	<a href="/hsl-color-picker">HS-Luminance Color Picker</a>
 </body>
 </html>
