--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<a href="/qrcode-generator">QRCode Generator</a><br>
-	<a href="/finance-calculator">Finance Calculator</a>
+	<a href="/finance-calculator">Finance Calculator</a><br>
 	<a href="/hsl-color-picker">HS-Luminance Color Picker</a>
 </body>
 </html>
