Update google search

--- a/qrcode-generator/index.html
+++ b/qrcode-generator/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1, minimum-scale=1" />
 	<meta name="theme-color" content="#000000" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+	<meta name="google-site-verification" content="43OpHTw6iuqgt2ymVlFqhFewv6yr-2xmixoh6oEzvn8" />
 	<meta name="description" content="Free QRCode Generator."/>
 	<meta name="keywords" content="QRCode, QRCode Generator, Free QRCode Generator, Link QRCode Generator, URL QRCode Generator, Wifi QRCode Generator, Location QRCode Generator, Crypto QRCode Generator"/>
 	<meta name="author" content="Ved Smithiprechawongse"/>
@@ -18,12 +19,12 @@
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://vedsmith92.github.io/qrcode-generator"/>
 	<meta property="og:site_name" content="QRCode Generator"/>
-	<link rel="shortcut icon" type="image/png" href="/qrcode-generator/assets/favicon.18402967.png" />
+	<link rel="shortcut icon" type="image/png" href="./assets/favicon.18402967.png" />
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
 	<title>QRCode Generator – by vedsmith92.github.io</title>
-  <script type="module" crossorigin src="/qrcode-generator/assets/index.46bd4cab.js"></script>
-  <link rel="stylesheet" href="/qrcode-generator/assets/index.56c5f482.css">
-<link rel="manifest" href="/qrcode-generator/manifest.webmanifest"><script id="vite-plugin-pwa:register-sw" src="/qrcode-generator/registerSW.js"></script></head>
+  <script type="module" crossorigin src="./assets/index.46bd4cab.js"></script>
+  <link rel="stylesheet" href="./assets/index.6eaf849f.css">
+<link rel="manifest" href="./manifest.webmanifest"><script id="vite-plugin-pwa:register-sw" src="./registerSW.js"></script></head>
 <body>
 	<noscript>This app requires Javascript to be enabled.</noscript>
 	<div id="app"></div>
